PHPWhois 4.2.2~core5

	* Switch to the new interface for accessing Core cache.
	* Documentation change, @copyright.
	-- Charlie Powell <charlie@eval.bz>  Sat, 22 Mar 2014 15:01:34 -0400

PHPWhois 4.2.2~core4

	* Make use of the namespace versions of View instead of static.
	* Just had to fix the template.  Since it was a .php file, the syntax checker was still trying to
	  perform lint testing on it.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:48:16 -0400

PHPWhois 4.2.2~core3

	* Updated to work with Core 2.5.6
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 05:08:54 -0400

PHPWhois 4.2.2~core2

	* [Bug] Minor bug fix on the javascript request logic.  Somehow I put "type:json" instead of
	  "dataType: json".
	-- Charlie Powell <charlie@eval.bz>  Wed, 15 May 2013 10:43:56 -0400

PHPWhois 4.2.2~core1

	* Initial version imported from http://sourceforge.net/projects/phpwhois/, cleaned up, and Core-ified.
	-- Charlie Powell <charlie@eval.bz>  Mon, 29 Apr 2013 14:29:54 -0400
